tests/react_experimental/react_experimental.exp
Error ------------------------------------------------------------------------------------ useDeferredValue_hook.js:7:30

Cannot call `React.useDeferredValue` with object literal bound to `config` because property `timeoutMs` is missing in
object literal [1] but exists in `TimeoutConfig` [2]. [incompatible-call]

   useDeferredValue_hook.js:7:30
     7| React.useDeferredValue(true, {}); // Error: property `timeoutMs` is missing in object literal but exists in `SuspenseConfig`
                                     ^^ [1]

References:
   <BUILTINS>/react.js:398:13
   398|     config: TimeoutConfig | void | null,
                    ^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------ useDeferredValue_hook.js:9:30

Cannot call `React.useDeferredValue` with object literal bound to `config` because property `foo` is missing in
`TimeoutConfig` [1] but exists in object literal [2]. [incompatible-call]

   useDeferredValue_hook.js:9:30
     9| React.useDeferredValue(true, {foo: 1}); // Error: property `foo` is missing in `SuspenseConfig`
                                     ^^^^^^^^ [2]

References:
   <BUILTINS>/react.js:398:13
   398|     config: TimeoutConfig | void | null,
                    ^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------- useTransition_hook.js:7:21

Cannot call `React.useTransition` with object literal bound to `config` because property `timeoutMs` is missing in
object literal [1] but exists in `TimeoutConfig` [2]. [incompatible-call]

   useTransition_hook.js:7:21
     7| React.useTransition({}); // Error: property `timeoutMs` is missing in object literal but exists in `SuspenseConfig`
                            ^^ [1]

References:
   <BUILTINS>/react.js:402:13
   402|     config: TimeoutConfig | void | null,
                    ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- useTransition_hook.js:9:21

Cannot call `React.useTransition` with object literal bound to `config` because property `foo` is missing in
`TimeoutConfig` [1] but exists in object literal [2]. [incompatible-call]

   useTransition_hook.js:9:21
     9| React.useTransition({foo: 1}); // Error: property `foo` is missing in `SuspenseConfig`
                            ^^^^^^^^ [2]

References:
   <BUILTINS>/react.js:402:13
   402|     config: TimeoutConfig | void | null,
                    ^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- useTransition_hook.js:15:17

Cannot call `startTransition` with `true` bound to the first parameter because boolean [1] is incompatible with function
type [2]. [incompatible-call]

   useTransition_hook.js:15:17
    15| startTransition(true); // error
                        ^^^^ [1]

References:
   <BUILTINS>/react.js:403:8
   403|   ): [(() => void) => void, boolean];
               ^^^^^^^^^^ [2]



Found 5 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
